# capstone

./: .gitignore  CLAUDE.md  COIL_CLASSIFIER_SPEC.md  README.md  pyproject.toml
artifacts/annotation/: annotations_train.json  annotations_val.json
artifacts/manifests/: cache_index_v1.csv  cache_index_v1_322cd5d0.csv  cache_index_v1_6c64101c.csv  manifest.csv  test_v1.csv  train_v1.csv  val_v1.csv
coilvision/: __init__.py  annotate.py  annotations.py  anomaly.py  config.py
coilvision/data/: eda.py  manifest.py  preprocess.py  split.py  validate.py
coilvision/eval/: gradcam.py  metrics.py  report.py
coilvision/pipeline/: promote.py  retrain.py  watcher.py
coilvision/predict/: cli.py
coilvision/train/: datamodule.py  patchclf.py  trainer.py
configs/: config.yaml
scripts/: predict.bat  register_task.ps1  retrain.bat  watcher.bat
tests/: test_annotations.py  test_cache.py  test_docs.py  test_leakage_osd.py  test_manifest.py  test_pipeline.py  test_predict.py  test_preprocess.py  test_promote.py  test_report.py  test_smoke.py  test_split.py  test_train.py  test_validate.py
